# psensor

./: AUTHORS  README.md
scripts/: install-resources
src/: Makefile.am  config.h  fan_control_utils.c  fan_control_utils.h  main.c  ui.c  ui.h  ui_fancontrol.c  ui_fancontrol.h
src/GUI/: README.md  cfg.c  cfg.h  fan_control_utils.c  graph.c  graph.h  main.c  meson.build  notify_cmd.c  notify_cmd.h  pxdg.c  rsensor.c  rsensor.h  ui.c  ui.h  ui_appindicator.c  ui_appindicator.h  ui_color.c  ui_color.h  ui_fancontrol.c  ui_fancontrol.h  ui_notify.h  ui_pref.c  ui_sensorlist.c  ui_sensorlist.h  ui_sensorpref.c  ui_sensorpref.h  ui_status.c  ui_status.h  ui_unity.c  ui_unity.h
src/GUI/glade/: glade_string_literal.h  psensor-fan-controller.glade  psensor.glade
src/glade/: Makefile.am  psensor-fan-controller.glade
src/lib/: Makefile.am  README.md  adl_defines.h  adl_sdk.h  amd.c  color.c  hdd_atasmart.c  hdd_hddtemp.c  lmsensor.c  measure.c  meson.build  meson_options.txt  nvidia.c  pgtop2.c  pio.c  plog.c  pmutex.c  precord.c  psensor.c  psensor.h  psensor_json.c  ptime.c  pudisks2.c  slog.c  temperature.c  url.c
src/lib/ext_lib/CMessagePack/: cmp.c  cmp.h
src/lib/include/psensor/: amd.h  bool.h  hdd.h  lmsensor.h  nvidia.h  pgtop2.h  precord.h  psensor_json.h  pudisks2.h
src/server/: README.md  meson.build  server.c  server.h  sysinfo.c  sysinfo.h
