project('PSensor GUI', 'c')
psensorLibDeps = [ dependency('json-c'), dependency('glib-2.0'), dependency('libgtop-2.0'), dependency('gio-unix-2.0'), dependency('udisks2'), dependency('libatasmart')]
psensorLibSrc = [ '../lib/amd.c', '../lib/psensor_json.c', '../lib/color.c', '../lib/hdd_atasmart.c', '../lib/hdd_hddtemp.c', '../lib/lmsensor.c', '../lib/measure.c', '../lib/nvidia.c', '../lib/pgtop2.c', '../lib/pio.c', '../lib/plog.c', '../lib/pmutex.c', '../lib/psensor.c', '../lib/ptime.c', '../lib/pudisks2.c', '../lib/slog.c', '../lib/temperature.c', '../lib/url.c']
psensorGuiDeps = [ dependency('gtk+-3.0'), dependency('x11'), dependency('libnotify'), dependency('libcurl'), dependency('unity'), dependency('appindicator3-0.1'), dependency('pango'), dependency('cairo'), dependency('gdk-pixbuf-2.0'), dependency('atk'), dependency('freetype2'), dependency('harfbuzz'), dependency('glib-2.0'), dependency('atspi-2'), dependency('dbus-1'), dependency('fribidi'), dependency('libxml2'), dependency('pixman-1'), dependency('libpng16'), dependency('gio-unix-2.0'), dependency('blkid'), dependency('sysprof-capture-4'), dependency('libgtop-2.0'), dependency('json-c'), dependency('p11-kit-1')]
psensorGuiSrc = [ 'cfg.c', 'fan_control_utils.c', 'graph.c', 'notify_cmd.c', 'pxdg.c', 'rsensor.c', 'ui.c', 'ui_appindicator.c', 'ui_color.c', 'ui_fancontrol.c', 'ui_graph.c', 'ui_notify.c', 'ui_pref.c', 'ui_sensorlist.c', 'ui_sensorpref.c', 'ui_status.c', 'ui_unity.c', 'main.c']
psensorLib = static_library('psensor', psensorLibSrc, dependencies : psensorLibDeps)
psensorInclude = [ include_directories('../lib/include/'), include_directories('../') ]
executable('psensor', psensorGuiSrc, link_with : psensorLib, include_directories : psensorInclude, dependencies : psensorGuiDeps, link_args : ['-lm', '-lsensors', '-lXNVCtrl', '-lXext', '-DGTK_DISABLE_SINGLE_INCLUDES', '-DGDK_DISABLE_DEPRECATED', '-DWITH_GZFILEOP', '-DGSEAL_ENABLE', '-pthread', '-Wl,--as-needed', '-export-dynamic'])
